--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,11 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
 
+      - name: Install Gradle
+        run: sudo apt-get update && sudo apt-get install -y gradle
+
       - name: Build with Gradle
-        run: ./gradlew build
+        run: gradle build
 
       - name: Build Docker image
         run: docker build -t chaecker/DEST:latest .
