--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
         run: gradle build
 
       - name: Build Docker image
-        run: docker build -t chaecker/DEST:latest .
+        run: docker build -t chaecker/dest:latest .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push Docker image
-        run: docker push chaecker/DEST:latest
+        run: docker push chaecker/dest:latest
