--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 15
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '11'
+          java-version: '15'
 
       - name: Install Gradle
         run: sudo apt-get update && sudo apt-get install -y gradle
@@ -27,6 +27,18 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t chaecker/dest:latest .
+          #
+          #- name: Test Run Docker Container
+          #run: docker run -d --name test-container chaecker/dest:latest
+          #
+          #- name: Check if container is running
+          #run: docker ps | grep test-container
+          #
+          #- name: Run tests in container
+          #run: | docker exec test-container <-test command->
+          #
+          #- name: Stop and remove container
+          #run: docker rm -f test-container 
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
