--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,18 +27,15 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t chaecker/dest:latest .
-          #
-          #- name: Test Run Docker Container
-          #run: docker run -d --name test-container chaecker/dest:latest
-          #
-          #- name: Check if container is running
-          #run: docker ps | grep test-container
-          #
-          #- name: Run tests in container
-          #run: | docker exec test-container <-test command->
-          #
-          #- name: Stop and remove container
-          #run: docker rm -f test-container 
+      
+      - name: Test Run Docker Container
+        run: docker run -i -t --name test-container chaecker/dest:latest
+
+      - name: Run tests in container
+        run: echo "exit"
+        
+      - name: Stop and remove container
+        run: docker rm -f test-container 
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
